# green-book

./: .markdownlint.json  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  main.yml
cloud-computing/basics/: index.html
contact/: index.html
databases/basics/: index.html
docs/: contact.md  index.md
docs/cloud-computing/: basics.md
docs/databases/: basics.md
docs/machine-learning/: index.md
docs/node-js/: index.md
docs/project-management/: basics.md
docs/python/: basics.md
flask/basics/: index.html
flask/orm-sqlalchemy/: index.html
flask/requests-response/: index.html
flask/routes-blueprints/: index.html
golang/: index.html
machine-learning/: index.html
node-js/: index.html
project-architecture/basics/: index.html
project-architecture/ddd/: index.html
project-architecture/folder-structure/: index.html
project-architecture/layers/: index.html
project-management/basics/: index.html
project-management/cost/: index.html
project-management/design/: index.html
project-management/planning/: index.html
project-management/problem/: index.html
project-management/reports/: index.html
project-management/requirements/: index.html
project-management/review/: index.html
project-management/roles/: index.html
project-management/scope/: index.html
project-management/solution/: index.html
project-management/tasks/: index.html
project-management/team/: index.html
rust/: index.html
scratch/: commands.txt
search/: search_index.json
(+12 files in other folders)
