[tool.poetry]
name = "green-book-jagadeesh-katla"
version = "0.1.0"
description = "A green Book Of Jagadeesh Katla. this book has many approaches and methods to solve software problems. And it can explain clearly how to use tools and techniques to perfect project outcomes."
authors = ["jagadeesh32 <katla.jagadeesh@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^7.3.0"
mkdocs-git-revision-date-plugin = "^0.3.1"
mkdocs-git-revision-date-localized-plugin = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
